# oarepo-model-builder-rdm

./: .gitignore  format.sh  run-tests.sh  setup.cfg
build-tests/: test_import.py  thesis.yaml
oarepo_model_builder_rdm/builtin_models/: rdm.json  rdm_elements.yaml
oarepo_model_builder_rdm/datatypes/components/: __init__.py  links.py  marshmallow.py  published_service.py  record.py  resource.py  search_options.py  service.py
oarepo_model_builder_rdm/invenio/: __init__.py  invenio_rdm_config.py
oarepo_model_builder_rdm/invenio/templates/: rdm_config.py.jinja2
