[metadata]
name = oarepo-model-builder-rdm
version = 1.0.0
description = xy
authors = Alzbeta Pokorna <alzbeta.pokorna@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown


[options]
python = >=3.12
install_requires =
    oarepo-model-builder-tests>=3.1.0
    oarepo-model-builder>=3.1.2

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

#[options.packages.find]
#exclude = example_model
[options.entry_points]

oarepo.models =
    rdm  = oarepo_model_builder_rdm.builtin_models:rdm.json

